# opencv-ffmpeg-test

./: CMakeLists.txt  README.rst
cmake/Hunter/: config.cmake
